// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Karura dex > addLiquidity and stake works > events 1`] = `
[
  {
    "data": {
      "currency0": {
        "Token": "KSM",
      },
      "currency1": {
        "Token": "LKSM",
      },
      "pool0": 1000000000000,
      "pool1": "(rounded 7700000000000)",
      "shareIncrement": "(rounded 1700000000000)",
      "who": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "AddLiquidity",
    "section": "dex",
  },
]
`;

exports[`Karura dex > addLiquidity works > events 1`] = `
[
  {
    "data": {
      "currency0": {
        "Token": "KSM",
      },
      "currency1": {
        "Token": "LKSM",
      },
      "pool0": 1000000000000,
      "pool1": "(rounded 7700000000000)",
      "shareIncrement": "(rounded 1700000000000)",
      "who": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "AddLiquidity",
    "section": "dex",
  },
]
`;

exports[`Karura dex > aggregatedDex supply swap works > events 1`] = `
[
  {
    "data": {
      "liquidityChanges": [
        1000000000000,
        "(rounded 140000000000)",
        "(rounded 50000000000000)",
      ],
      "path": [
        {
          "Token": "KSM",
        },
        {
          "ForeignAsset": 0,
        },
        {
          "Token": "KUSD",
        },
      ],
      "trader": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Swap",
    "section": "dex",
  },
  {
    "data": {
      "a": 10000,
      "balances": [
        "(rounded 1100000000000000000)",
        "(rounded 37000000000000000)",
        "(rounded 37000000000000000)",
      ],
      "inputAmount": "(rounded 50000000000000)",
      "inputAsset": {
        "Token": "KUSD",
      },
      "minOutputAmount": 0,
      "outputAmount": "(rounded 36000000)",
      "outputAsset": {
        "ForeignAsset": 7,
      },
      "poolId": 1,
      "swapper": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "totalSupply": "(rounded 1100000000000000000)",
    },
    "method": "TokenSwapped",
    "section": "stableAsset",
  },
]
`;

exports[`Karura dex > dexRemoveLiquidity works  > events 1`] = `
[
  {
    "data": {
      "currency0": {
        "Token": "KSM",
      },
      "currency1": {
        "Token": "LKSM",
      },
      "pool0": 1000000000000,
      "pool1": "(rounded 7700000000000)",
      "shareIncrement": "(rounded 1700000000000)",
      "who": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "AddLiquidity",
    "section": "dex",
  },
]
`;

exports[`Karura dex > dexRemoveLiquidity works  > events 2`] = `
[
  {
    "data": {
      "currency0": {
        "Token": "KSM",
      },
      "currency1": {
        "Token": "LKSM",
      },
      "pool0": "(rounded 1000000000000)",
      "pool1": "(rounded 7700000000000)",
      "shareDecrement": "(rounded 1700000000000)",
      "who": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "RemoveLiquidity",
    "section": "dex",
  },
]
`;

exports[`Karura dex > stable swap works > events 1`] = `
[
  {
    "data": {
      "liquidityChanges": [
        "(rounded 20000000000)",
        1000000000000,
      ],
      "path": [
        {
          "Token": "KSM",
        },
        {
          "Token": "KUSD",
        },
      ],
      "trader": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Swap",
    "section": "dex",
  },
]
`;

exports[`Karura dex > stable swap works > events 2`] = `
[
  {
    "data": {
      "a": 10000,
      "balances": [
        "(rounded 1000000000000000000)",
        "(rounded 40000000000000000)",
        "(rounded 40000000000000000)",
      ],
      "inputAmount": 1000000000000,
      "inputAsset": {
        "Token": "KUSD",
      },
      "minOutputAmount": 0,
      "outputAmount": "(rounded 700000)",
      "outputAsset": {
        "ForeignAsset": 7,
      },
      "poolId": 1,
      "swapper": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "totalSupply": "(rounded 1000000000000000000)",
    },
    "method": "TokenSwapped",
    "section": "stableAsset",
  },
]
`;

exports[`Karura dex > stableAsset mint works > events 1`] = `
[
  {
    "data": {
      "a": 3000,
      "balances": [
        "(rounded 9000000000000000)",
        "(rounded 10000000000000000)",
      ],
      "feeAmount": 0,
      "inputAmounts": [
        1000000000000,
        10000000000000,
      ],
      "minOutputAmount": 0,
      "minter": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "outputAmount": "(rounded 10000000000000)",
      "poolId": 0,
      "totalSupply": "(rounded 20000000000000000)",
    },
    "method": "Minted",
    "section": "stableAsset",
  },
]
`;

exports[`Karura dex > supply swap works > events 1`] = `
[
  {
    "data": {
      "liquidityChanges": [
        1000000000000,
        "(rounded 50000000000000)",
      ],
      "path": [
        {
          "Token": "KSM",
        },
        {
          "Token": "KUSD",
        },
      ],
      "trader": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Swap",
    "section": "dex",
  },
]
`;

exports[`Karura dex > target swap works > events 1`] = `
[
  {
    "data": {
      "liquidityChanges": [
        "(rounded 20000000000)",
        1000000000000,
      ],
      "path": [
        {
          "Token": "KSM",
        },
        {
          "Token": "KUSD",
        },
      ],
      "trader": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Swap",
    "section": "dex",
  },
]
`;
